--- a/Xamarin.Forms.Core/Xamarin.Forms.Core.csproj
+++ b/Xamarin.Forms.Core/Xamarin.Forms.Core.csproj
@@ -418,6 +418,7 @@
     <Compile Include="PoppedToRootEventArgs.cs" />
     <Compile Include="BindableObjectProxy.cs" />
     <Compile Include="NativeBindingHelpers.cs" />
+    <Compile Include="EventWrapper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
